--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "app-functions",
   "version": "1.0.0",
   "private": "true",
-  "dependencies": {
-    "jwt-decode": "^4.0.0"
-  },
   "devDependencies": {
+    "@betty-blocks/cli": "^25.98.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "build": "tsc -p ./tsconfig.json && echo 'builded the betty functions'",
+    "format": "prettier ./src --write",
+    "build": "npm run format && tsc -p ./tsconfig.json && echo 'builded the betty functions'",
     "publish": "npm run build && bb functions publish"
   }
 }
