Added readme's and fixed errors & styling

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "typescript": "^5.6.3"
   },
   "scripts": {
-    "format": "prettier ./src --write",
-    "build": "npm run format && tsc -p ./tsconfig.json && echo 'builded the betty functions'",
-    "publish": "npm run build && bb functions publish"
+    "format": "prettier ./src/**/*.{ts,json} --write",
+    "build": "npm run format && tsc -p ./tsconfig.json && echo '\nBuilded the betty functions\nPublishing..'",
+    "publish": "npm run build && bb functions publish",
+    "fmt": "npm run format",
+    "pub": "npm run publish"
   }
 }
