--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": "true",
   "devDependencies": {
-    "@betty-blocks/cli": "^25.98.0",
+    "@betty-blocks/cli": "^25.99.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
   "scripts": {
     "format": "prettier ./src/**/*.{ts,json} --write",
-    "build": "npm run format && tsc -p ./tsconfig.json && echo '\nBuilded the betty functions\nPublishing..'",
-    "publish": "npm run build && bb functions publish"
+    "build": "npm run format && tsc -p ./tsconfig.json && echo '\nBuilded the betty functions'",
+    "publish": "echo '\nPublishing..' && npm run build && bb functions publish"
   }
 }
