--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": "true",
   "devDependencies": {
     "@betty-blocks/cli": "^25.106.0",
+    "glob": "^10.4.5",
+    "minify": "^13.0.0",
+    "npm-check-updates": "^17.1.14",
     "prettier": "^3.4.2",
     "typescript": "^5.7.3"
   },
@@ -11,6 +14,7 @@
     "format": "prettier ./src/**/*.{ts,json} --write",
     "build": "npm run format && tsc -p ./tsconfig.json && echo '\nBuilded the betty functions'",
     "publish": "echo '\nPublishing..' && npm run build && bb functions publish",
-    "updated-packages": "npm i -g npm-check-updates && ncu -u && npm install"
+    "publish-prod": "echo '\nPublishing..' && npm run build && node minify.mjs && bb functions publish",
+    "updated-packages": "ncu -u && npm install"
   }
 }
