Removed echo for Windows compatibility

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "scripts": {
     "format": "prettier \"./src/**/**/*.{ts,json}\" \"./src/**/*.{ts,json}\" --write",
-    "build": "npm run format && tsc -p ./tsconfig.json && echo '\nBuilded the betty functions'",
-    "publish": "echo '\nPublishing..' && npm run build && bb functions publish",
-    "publish-prod": "echo '\nPublishing..' && npm run build && node minify.mjs && bb functions publish",
+    "build": "npm run format && tsc -p ./tsconfig.json",
+    "publish": "npm run build && bb functions publish",
+    "publish-prod": "npm run build && node minify.mjs && bb functions publish",
     "updated-packages": "ncu -u && npm install"
   }
 }
