Added test for expressions

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "format": "prettier \"./src/**/**/*.{ts,json}\" \"./src/**/*.{ts,json}\" \"./tests\" --write",
     "test": "jest",
-    "build": "npm run format && tsc -p ./tsconfig.json && rm -rf functions/utils/liquid.min.js && node post-build.mjs",
+    "build": "npm run format && npm run test && tsc -p ./tsconfig.json && rm -rf functions/utils/liquid.min.js && node post-build.mjs",
     "publish": "npm run build && bb functions publish",
     "update-packages": "ncu -u -x glob && npm install"
   },
