--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "compileOnSave": true,
-  "include": ["src/**/index.ts", "src/**/function.json"]
+  "include": ["src/**/index.ts", "src/**/function.json", "src/types"]
 }
