--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:cov": "jest --collect-coverage",
     "build": "npm run format && tsc -p ./tsconfig.json && rm -rf functions/utils/liquid.min.js && node post-build.mjs",
     "publish": "npm run build && npm run test && bb functions publish",
+    "publish:no-test": "npm run build && bb functions publish",
     "update-packages": "ncu -u -x glob && npm install"
   },
   "dependencies": {
