--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
     "update-packages": "ncu -u -x glob && npm install"
   },
   "dependencies": {
+    "@betty-blocks/cli": "25.104.0",
+    "@types/jest": "^29.5.14",
     "date-fns": "^4.1.0",
-    "remeda": "^2.20.2"
+    "prettier": "^3.5.3",
+    "remeda": "^2.21.6",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@betty-blocks/cli": "^25.107.0",
-    "@types/jest": "^29.5.14",
-    "glob": "^10.4.5",
-    "minify": "^13.0.0",
-    "npm-check-updates": "^17.1.14",
-    "prettier": "^3.5.1",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3"
+    "npm-check-updates": "^18.0.1"
   }
 }
