Full test coverage (#2)
* Changed build to changed only and remoevd shee action into test-action

* 80%+ coverage

* Refactored some code

* Added extra function

* Added more test coverage and refactored code

* Added schema

* Added delete-all and extra tests

* Formatted all files

--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "app-functions",
   "version": "1.0.0",
   "private": "true",
   "scripts": {
     "format": "prettier \"./src/**/**/*.{ts,json}\" \"./src/**/*.{ts,json}\" \"./tests\" --write --print-width 120",
     "test": "jest",
+    "test:only-changed": "jest --onlyChanged",
     "test:cov": "jest --collect-coverage",
+    "lint": "eslint \"./src/**/**/*.{ts,json}\" \"./src/**/*.{ts,json}\" --fix",
     "build": "npm run format && tsc -p ./tsconfig.json && rm -rf functions/utils/liquid.min.js && node post-build.mjs",
-    "publish": "npm run build && npm run test && bb functions publish",
+    "publish": "npm run build && npm run test:only-changed && bb functions publish",
     "publish:no-test": "npm run build && bb functions publish",
     "update-packages": "ncu -u -x glob && npm install"
   },
   "dependencies": {
-    "@betty-blocks/cli": "25.104.0",
-    "@types/jest": "^29.5.14",
+    "@betty-blocks/cli": "25.107.0",
+    "@types/jest": "^30.0.0",
     "date-fns": "^4.1.0",
-    "prettier": "^3.5.3",
-    "remeda": "^2.21.6",
-    "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3"
+    "prettier": "^3.6.2",
+    "remeda": "^2.24.0",
+    "ts-jest": "^29.4.0"
   },
   "devDependencies": {
-    "npm-check-updates": "^18.0.1"
+    "@eslint/js": "^9.30.1",
+    "eslint": "^9.30.1",
+    "npm-check-updates": "^18.0.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.36.0"
   }
 }
