--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "build": "npm run format && tsc -p ./tsconfig.json && rm -rf functions/utils/liquid.min.js && node post-build.mjs",
     "publish": "npm run build && npm run test && bb functions publish",
     "publish:no-test": "npm run build && bb functions publish",
-    "update-packages": "ncu -u -x glob && npm install"
+    "update-packages": "ncu -u -x glob -x npm-check-updates && npm install"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "remeda": "^2.26.1"
+    "remeda": "^2.32.0"
   },
   "devDependencies": {
     "@betty-blocks/cli": "25.108.0",
-    "@eslint/js": "^9.31.0",
+    "@eslint/js": "^9.39.0",
     "@types/jest": "^30.0.0",
-    "eslint": "^9.31.0",
-    "globals": "^16.3.0",
+    "eslint": "^9.39.0",
+    "globals": "^16.5.0",
     "npm-check-updates": "^18.0.1",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   },
   "prettier": {
     "printWidth": 100
