--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "target": "es2024",
     "outDir": "functions/",
-    "module": "ESNext",
+    "module": "node16",
     "lib": ["DOM", "DOM.Iterable", "ES2024"],
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "resolveJsonModule": true,
     "rootDir": "./src",
     "allowSyntheticDefaultImports": true,
