--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "strict": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true
   },
   "compileOnSave": true,
   "include": ["src/**/index.ts", "src/**/function.json", "src"],
