Added test for PC4 and fixed CrUpd function

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "remeda": "^2.32.0"
+    "remeda": "^2.32.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@betty-blocks/cli": "25.108.0",
     "@eslint/js": "^9.39.1",
     "@types/jest": "^30.0.0",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "npm-check-updates": "^18.0.1",
